<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_constraint_layout__student_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScreenStudentAddActivity">

    <EditText
        android:id="@+id/activity__edit__text__full_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="start"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity__edit__text_note"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="start"
        android:text="@string/note"
        app:layout_constraintEnd_toEndOf="@id/activity__edit__text__full_name"
        app:layout_constraintStart_toStartOf="@id/activity__edit__text__full_name"
        app:layout_constraintTop_toTopOf="@id/activity__edit__text__full_name" />

    <EditText
        android:id="@+id/activity__edit__text__image_rsc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="start"
        android:text="@string/image_link"
        app:layout_constraintEnd_toEndOf="@id/activity__edit__text_note"
        app:layout_constraintStart_toStartOf="@id/activity__edit__text_note"
        app:layout_constraintTop_toTopOf="@id/activity__edit__text_note" />


    <EditText
        android:id="@+id/activity__edit__text_course"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="start"
        android:text="@string/course"
        app:layout_constraintEnd_toEndOf="@id/activity__edit__text__image_rsc"
        app:layout_constraintStart_toStartOf="@id/activity__edit__text__image_rsc"
        app:layout_constraintTop_toTopOf="@id/activity__edit__text__image_rsc" />
</androidx.constraintlayout.widget.ConstraintLayout>